--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SudokuController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SudokuController">
     <children>
         <fx:include fx:id="NavBar" source="nav-bar.fxml" />
         <Label fx:id="testLabel" layoutX="289.0" layoutY="245.0" prefHeight="20.0" prefWidth="309.0" text="Label" wrapText="true" />
