--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-save-load-dialog.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-save-load-dialog.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="main" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SaveLoadController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SaveLoadController">
    <children>
       <Button layoutX="274.0" layoutY="222.0" mnemonicParsing="false" onAction="#closeDialog" text="close" />
       <Label fx:id="testLabel" layoutX="286.0" layoutY="106.0" text="Label" />
