--- a/sudoku-club/src/main/resources/org/sudokuclub/style.css
+++ b/sudoku-club/src/main/resources/org/sudokuclub/style.css
@@ -3,6 +3,10 @@
     -fx-header: #FFBDE1;
     -fx-button: #7C7492;
     -fx-button-darker: #615b73;
+    -fx-grid-line: #b52672;
+    -fx-disabled-grey: #b5b5b5;
+    -fx-secondary-brighter: #faf0f6;
+    -fx-negative: #d90019;
 }
 
 @font-face {
@@ -34,4 +38,41 @@
 
 .button:hover, .button:focused {
     -fx-background-color: -fx-button-darker;
+}
+
+.sudoku__name {
+    -fx-text-alignment: center;
+}
+
+.sudoku__author {
+    -fx-text-alignment: center;
+}
+
+.sudoku__grid {
+    -fx-border-width: 2px;
+    -fx-border-color: -fx-grid-line;
+    -fx-padding: 2px 0px 3px 0px;
+}
+
+.sudoku__grid-line {
+    -fx-stroke: -fx-grid-line;
+    -fx-stroke-width: 2px;
+}
+
+.sudoku__cell {
+    -fx-font-size: 22px;
+    -fx-alignment: center;
+    -fx-background-color: white;
+    -fx-border-style: dashed;
+    -fx-border-width: 1px 1px;
+    -fx-border-color: black;
+}
+
+.sudoku__cell--disabled {
+    -fx-background-color: -fx-secondary-brighter;
+    -fx-text-fill: -fx-disabled-grey;
+}
+
+.sudoku__cell--invalid {
+    -fx-text-fill: -fx-negative;
 }
