--- a/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
@@ -6,7 +6,13 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.LoginController">
    <children>
        <fx:include fx:id="NavBar" source="nav-bar.fxml" />
-      <Label fx:id="testLabel" layoutX="386.0" layoutY="292.0" text="Label" />
-      <Button layoutX="258.0" layoutY="321.0" mnemonicParsing="false" onAction="#goToRegisterView" text="Go to Register" />
+      <Label layoutX="336.0" layoutY="307.0" text="Don't have an account?" />
+      <Button layoutX="335.0" layoutY="324.0" mnemonicParsing="false" onAction="#goToRegisterView" text="Create account" />
+      <TextField fx:id="loginField" layoutX="336.0" layoutY="170.0" />
+      <Label layoutX="295.0" layoutY="174.0" text="Login" />
+      <Label layoutX="272.0" layoutY="225.0" text="Password" />
+      <PasswordField fx:id="passwordField" layoutX="336.0" layoutY="221.0" />
+      <Button fx:id="signInButton" layoutX="362.0" layoutY="261.0" mnemonicParsing="false" text="Sign In" />
+      <Label fx:id="signInMessage" layoutX="447.0" layoutY="267.0" prefHeight="17.0" prefWidth="76.0" />
    </children>
 </Pane>
