--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
@@ -6,7 +6,13 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SudokuListController">
     <children>
         <fx:include fx:id="NavBar" source="nav-bar.fxml" />
-        <Label fx:id="testLabel" layoutX="289.0" layoutY="243.0" prefHeight="20.0" prefWidth="262.0" text="Label" wrapText="true" />
-      <Button layoutX="325.0" layoutY="311.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" text="Play test sudoku" />
+      <Button layoutX="325.0" layoutY="495.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" text="Play test sudoku" />
+      <TableView fx:id="sudokuTable" layoutX="165.0" layoutY="156.0" prefHeight="327.0" prefWidth="470.0" styleClass="sudoku-table">
+         <columns>
+            <TableColumn fx:id="nameColumn" editable="false" prefWidth="262.0" styleClass="sudoku-table__col" text="Name" />
+            <TableColumn fx:id="authorColumn" editable="false" prefWidth="144.0" styleClass="sudoku-table__col" text="Author" />
+            <TableColumn fx:id="doneColumn" editable="false" prefWidth="63.0" text="Done" />
+         </columns>
+      </TableView>
     </children>
 </Pane>
