--- a/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
@@ -5,7 +5,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.LoginController">
    <children>
-       <fx:include fx:id="NavBar" source="nav-bar.fxml" />
+       <fx:include fx:id="navBar" source="nav-bar.fxml" />
       <Label layoutX="336.0" layoutY="307.0" text="Don't have an account?" />
       <Button layoutX="335.0" layoutY="324.0" mnemonicParsing="false" onAction="#goToRegisterView" text="Create account" />
       <TextField fx:id="loginField" layoutX="336.0" layoutY="170.0" />
@@ -13,6 +13,6 @@
       <Label layoutX="272.0" layoutY="225.0" text="Password" />
       <PasswordField fx:id="passwordField" layoutX="336.0" layoutY="221.0" />
       <Button fx:id="signInButton" layoutX="362.0" layoutY="261.0" mnemonicParsing="false" text="Sign In" />
-      <Label fx:id="signInMessage" layoutX="447.0" layoutY="267.0" prefHeight="17.0" prefWidth="76.0" />
+      <Label fx:id="signInMessage" layoutX="447.0" layoutY="267.0" prefHeight="17.0" prefWidth="272.0" />
    </children>
 </Pane>
