--- a/sudoku-club/src/main/resources/org/sudokuclub/register-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/register-view.fxml
@@ -5,8 +5,14 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.RegisterController">
    <children>
-      <fx:include fx:id="NavBar" source="nav-bar.fxml" />
-      <Label fx:id="testLabel" layoutX="386.0" layoutY="237.0" text="Label" />
-      <Button layoutX="374.0" layoutY="275.0" mnemonicParsing="false" onAction="#goToLoginView" text="Go to Login" />
+      <fx:include fx:id="navBar" source="nav-bar.fxml" />
+      <TextField fx:id="loginField" layoutX="336.0" layoutY="170.0" />
+      <Label layoutX="295.0" layoutY="174.0" text="Login" />
+      <Label layoutX="272.0" layoutY="225.0" text="Password" />
+      <PasswordField fx:id="passwordField" layoutX="336.0" layoutY="221.0" />
+      <Button fx:id="registerButton" layoutX="357.0" layoutY="316.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="Register" />
+      <Label layoutX="227.0" layoutY="273.0" text="Confirm Password" />
+      <PasswordField fx:id="confirmPasswordField" layoutX="337.0" layoutY="269.0" />
+      <Label fx:id="resultLabel" layoutX="385.0" layoutY="370.0" />
    </children>
 </Pane>
