--- a/sudoku-club/src/main/resources/org/sudokuclub/style.css
+++ b/sudoku-club/src/main/resources/org/sudokuclub/style.css
@@ -35,3 +35,9 @@
 .button:hover, .button:focused {
     -fx-background-color: -fx-button-darker;
 }
+
+.form__register-link {
+    -fx-underline: true;
+    -fx-font-weight: bold;
+    -fx-text-fill: black;
+}
