--- a/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
@@ -11,7 +11,7 @@
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Label layoutX="303.0" layoutY="137.0" prefHeight="27.0" prefWidth="50.0" text="Login">
+      <Label layoutX="303.0" layoutY="137.0" prefHeight="27.0" prefWidth="50.0" styleClass="form__label" text="Login">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Label>
@@ -19,7 +19,7 @@
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <Label layoutX="303.0" layoutY="223.0" text="Password">
+      <Label layoutX="303.0" layoutY="223.0" styleClass="form__label" text="Password">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Label>
@@ -28,6 +28,6 @@
             <Font size="18.0" />
          </font></PasswordField>
       <Button fx:id="signInButton" layoutX="454.0" layoutY="316.0" mnemonicParsing="false" text="Sign In" />
-      <Label fx:id="signInMessage" layoutX="279.0" layoutY="96.0" prefHeight="17.0" prefWidth="272.0" />
+      <Label fx:id="signInMessage" layoutX="282.0" layoutY="439.0" prefHeight="17.0" prefWidth="272.0" />
    </children>
 </Pane>
