--- a/sudoku-club/src/main/resources/org/sudokuclub/register-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/register-view.fxml
@@ -2,17 +2,36 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.RegisterController">
    <children>
       <fx:include fx:id="navBar" source="nav-bar.fxml" />
-      <TextField fx:id="loginField" layoutX="336.0" layoutY="170.0" />
-      <Label layoutX="295.0" layoutY="174.0" text="Login" />
-      <Label layoutX="272.0" layoutY="225.0" text="Password" />
-      <PasswordField fx:id="passwordField" layoutX="336.0" layoutY="221.0" />
-      <Button fx:id="registerButton" layoutX="357.0" layoutY="316.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="Register" />
-      <Label layoutX="227.0" layoutY="273.0" text="Confirm Password" />
-      <PasswordField fx:id="confirmPasswordField" layoutX="337.0" layoutY="269.0" />
-      <Label fx:id="resultLabel" layoutX="385.0" layoutY="370.0" />
+      <TextField fx:id="loginField" layoutX="310.0" layoutY="170.0" prefHeight="30.0" prefWidth="225.0">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label layoutX="309.0" layoutY="134.0" styleClass="form__label" text="Login">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="309.0" layoutY="219.0" styleClass="form__label" text="Password">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <PasswordField fx:id="passwordField" layoutX="309.0" layoutY="256.0" prefHeight="30.0" prefWidth="225.0">
+         <font>
+            <Font size="18.0" />
+         </font></PasswordField>
+      <Button fx:id="registerButton" layoutX="442.0" layoutY="399.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="Register" />
+      <Label layoutX="312.0" layoutY="304.0" styleClass="form__label" text="Confirm Password">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <PasswordField fx:id="confirmPasswordField" layoutX="309.0" layoutY="340.0" prefHeight="30.0" prefWidth="225.0">
+         <font>
+            <Font size="18.0" />
+         </font></PasswordField>
+      <Label fx:id="resultLabel" layoutX="287.0" layoutY="457.0" prefHeight="17.0" prefWidth="270.0" />
    </children>
 </Pane>
