--- a/sudoku-club/src/main/resources/org/sudokuclub/style.css
+++ b/sudoku-club/src/main/resources/org/sudokuclub/style.css
@@ -36,6 +36,11 @@
     -fx-background-color: -fx-button-darker;
 }
 
+.form__label {
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+}
+
 .form__register-link {
     -fx-underline: true;
     -fx-font-weight: bold;
