--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
@@ -7,7 +7,7 @@
     <children>
         <fx:include fx:id="NavBar" source="nav-bar.fxml" />
       <Button layoutX="325.0" layoutY="495.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" text="Play test sudoku" />
-      <TableView fx:id="sudokuTable" layoutX="165.0" layoutY="156.0" prefHeight="327.0" prefWidth="470.0" styleClass="sudoku-table">
+      <TableView fx:id="sudokuTable" fixedCellSize="25.0" layoutX="165.0" layoutY="156.0" prefHeight="295.0" prefWidth="470.0" styleClass="sudoku-table">
          <columns>
             <TableColumn fx:id="nameColumn" editable="false" prefWidth="262.0" styleClass="sudoku-table__col" text="Name" />
             <TableColumn fx:id="authorColumn" editable="false" prefWidth="144.0" styleClass="sudoku-table__col" text="Author" />
