[added] dds-button CSS class [changed] All buttons in all views gained dds-button css class [added] totalPagesLabel in sudoku-list-view [changed] Get sudokusCount from db in updateRowItems method in SudokuListController [added] Pagination Pane in sudoku-list-view

--- a/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/login-view.fxml
@@ -27,7 +27,7 @@
          <font>
             <Font size="18.0" />
          </font></PasswordField>
-      <Button fx:id="signInButton" layoutX="454.0" layoutY="316.0" mnemonicParsing="false" text="Sign In" />
+      <Button fx:id="signInButton" layoutX="454.0" layoutY="316.0" mnemonicParsing="false" styleClass="dds-button" text="Sign In" />
       <Label fx:id="signInMessage" layoutX="282.0" layoutY="439.0" prefHeight="17.0" prefWidth="272.0" />
    </children>
 </Pane>
