--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-player-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-player-view.fxml
@@ -125,7 +125,7 @@
       <Line endX="289.0" endY="405.0" layoutX="164.0" layoutY="116.0" startX="289.0" startY="7.0" styleClass="sudoku__grid-line" />
       <Line endX="449.0" endY="130.0" layoutX="174.0" layoutY="126.0" startX="-62.0" startY="130.0" styleClass="sudoku__grid-line" />
       <Line endX="536.0" endY="130.0" layoutX="87.0" layoutY="258.0" startX="25.0" startY="130.0" styleClass="sudoku__grid-line" />
-      <Button layoutX="655.0" layoutY="122.0" mnemonicParsing="false" onAction="#check" text="Done" />
+      <Button layoutX="655.0" layoutY="122.0" mnemonicParsing="false" onAction="#check" styleClass="dds-button" text="Done" />
       <Label fx:id="sudokuValidationLabel" layoutX="644.0" layoutY="183.0" prefHeight="100.0" prefWidth="115.0" wrapText="true" />
     </children>
 </Pane>
