--- a/sudoku-club/src/main/resources/org/sudokuclub/register-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/register-view.fxml
@@ -23,7 +23,7 @@
          <font>
             <Font size="18.0" />
          </font></PasswordField>
-      <Button fx:id="registerButton" layoutX="442.0" layoutY="399.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="Register" />
+      <Button fx:id="registerButton" layoutX="442.0" layoutY="399.0" mnemonicParsing="false" onAction="#handleRegisterButton" styleClass="dds-button" text="Register" />
       <Label layoutX="312.0" layoutY="304.0" styleClass="form__label" text="Confirm Password">
          <font>
             <Font size="18.0" />
