--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
@@ -6,7 +6,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SudokuListController">
     <children>
         <fx:include fx:id="NavBar" source="nav-bar.fxml" />
-      <Button layoutX="325.0" layoutY="495.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" text="Play test sudoku" />
+      <Button layoutX="36.0" layoutY="485.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" styleClass="dds-button" text="Play test sudoku" />
       <TableView fx:id="sudokuTable" fixedCellSize="25.0" layoutX="165.0" layoutY="156.0" prefHeight="295.0" prefWidth="470.0" styleClass="sudoku-table">
          <columns>
             <TableColumn fx:id="nameColumn" editable="false" prefWidth="262.0" styleClass="sudoku-table__col" text="Name" />
@@ -14,5 +14,11 @@
             <TableColumn fx:id="doneColumn" editable="false" prefWidth="63.0" text="Done" />
          </columns>
       </TableView>
+      <Pane layoutX="260.0" layoutY="480.0" prefHeight="42.0" prefWidth="281.0" styleClass="sudoku-pagination">
+         <children>
+            <Label fx:id="totalPagesLabel" layoutX="149.0" layoutY="13.0" styleClass="sudoku-pagination__total-pages" text="Label" />
+            <Button layoutX="215.0" layoutY="9.0" mnemonicParsing="false" text="Go" />
+         </children>
+      </Pane>
     </children>
 </Pane>
