--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-view.fxml
@@ -7,6 +7,6 @@
     <children>
         <fx:include fx:id="NavBar" source="nav-bar.fxml" />
         <Label fx:id="testLabel" layoutX="289.0" layoutY="245.0" prefHeight="20.0" prefWidth="309.0" text="Label" wrapText="true" />
-      <Button layoutX="364.0" layoutY="298.0" mnemonicParsing="false" onAction="#openSaveLoadDialog" text="Save/Load" />
+      <Button layoutX="364.0" layoutY="298.0" mnemonicParsing="false" onAction="#openSaveLoadDialog" styleClass="dds-button" text="Save/Load" />
     </children>
 </Pane>
