[changed] Disabled prev and next page buttons, based on currentPage and pagesCount [changed] Moved setting up table columns from updateRowItems method to Initialize in SudokuListController

--- a/sudoku-club/src/main/resources/org/sudokuclub/style.css
+++ b/sudoku-club/src/main/resources/org/sudokuclub/style.css
@@ -127,6 +127,6 @@
 
 .sudoku-pagination {
     -fx-background-color: -fx-header;
-    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
 }
 
