--- a/sudoku-club/src/main/resources/org/sudokuclub/style.css
+++ b/sudoku-club/src/main/resources/org/sudokuclub/style.css
@@ -108,16 +108,16 @@
     -fx-padding: 2 0 2 10px;
 }
 
-.sudoku-table *.scroll-bar:horizontal *.increment-button,
-.sudoku-table *.scroll-bar:horizontal *.decrement-button {
+.sudoku-table *.scroll-bar *.increment-button,
+.sudoku-table *.scroll-bar *.decrement-button {
     -fx-background-color: null;
     -fx-background-radius: 0;
     -fx-background-insets: 0;
     -fx-padding: 0;
 }
 
-.sudoku-table *.scroll-bar:horizontal *.increment-arrow,
-.sudoku-table *.scroll-bar:horizontal *.decrement-arrow {
+.sudoku-table *.scroll-bar *.increment-arrow,
+.sudoku-table *.scroll-bar *.decrement-arrow {
     -fx-background-color: null;
     -fx-background-radius: 0;
     -fx-background-insets: 0;
