--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-list-view.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SudokuListController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sudokuclub.SudokuListController">
     <children>
         <fx:include fx:id="NavBar" source="nav-bar.fxml" />
-      <Button layoutX="36.0" layoutY="485.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" styleClass="dds-button" text="Play test sudoku" />
-      <TableView fx:id="sudokuTable" fixedCellSize="25.0" layoutX="165.0" layoutY="156.0" prefHeight="295.0" prefWidth="470.0" styleClass="sudoku-table">
+      <Button layoutX="326.0" layoutY="64.0" mnemonicParsing="false" onAction="#goToSudokuPlayer" styleClass="dds-button" text="Play test sudoku" />
+      <TableView fx:id="sudokuTable" fixedCellSize="25.0" layoutX="165.0" layoutY="185.0" prefHeight="266.0" prefWidth="470.0" styleClass="sudoku-table">
          <columns>
             <TableColumn fx:id="nameColumn" editable="false" prefWidth="262.0" styleClass="sudoku-table__col" text="Name" />
             <TableColumn fx:id="authorColumn" editable="false" prefWidth="144.0" styleClass="sudoku-table__col" text="Author" />
