[changed] disabled grey color in style

--- a/sudoku-club/src/main/resources/org/sudokuclub/style.css
+++ b/sudoku-club/src/main/resources/org/sudokuclub/style.css
@@ -4,7 +4,7 @@
     -fx-button: #7C7492;
     -fx-button-darker: #615b73;
     -fx-grid-line: #b52672;
-    -fx-disabled-grey: #b5b5b5;
+    -fx-disabled-grey: #9c9c9c;
     -fx-secondary-brighter: #faf0f6;
     -fx-negative: #d90019;
 }
