--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-designer-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-designer-view.fxml
@@ -120,6 +120,6 @@
     <Button fx:id="publishButton" layoutX="669.0" layoutY="223.0" mnemonicParsing="false" styleClass="dds-button" text="Publish" />
    <Button fx:id="saveButton" layoutX="669.0" layoutY="131.0" mnemonicParsing="false" styleClass="dds-button" text="Save" />
    <Button fx:id="loadButton" layoutX="669.0" layoutY="176.0" mnemonicParsing="false" styleClass="dds-button" text="Load" />
-   <Label fx:id="submissionResult" layoutX="669.0" layoutY="275.0" />
+   <Label fx:id="submissionResult" layoutX="669.0" layoutY="275.0" maxWidth="115.0" prefHeight="83.0" prefWidth="115.0" wrapText="true" />
    <TextField fx:id="sudokuTitleField" layoutX="318.0" layoutY="77.0" promptText="Sudoku title..." />
 </Pane>
