--- a/sudoku-club/src/main/resources/org/sudokuclub/sudoku-player-view.fxml
+++ b/sudoku-club/src/main/resources/org/sudokuclub/sudoku-player-view.fxml
@@ -127,5 +127,9 @@
       <Line endX="536.0" endY="130.0" layoutX="87.0" layoutY="258.0" startX="25.0" startY="130.0" styleClass="sudoku__grid-line" />
       <Button layoutX="655.0" layoutY="122.0" mnemonicParsing="false" onAction="#check" styleClass="dds-button" text="Done" />
       <Label fx:id="sudokuValidationLabel" layoutX="644.0" layoutY="183.0" prefHeight="100.0" prefWidth="115.0" wrapText="true" />
+      <Label fx:id="solvedLabel" layoutX="528.0" layoutY="71.0" prefHeight="20.0" prefWidth="166.0">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
     </children>
 </Pane>
